# aurmod

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  tests.yml
src/aurmod/: __init__.py  cli.py  utils.py
src/aurmod/commands/: __init__.py  add.py  init.py  sync.py
tests/: test_cli.py
