[project]
name = "aurmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Agil Mammadov", email = "mammadovagil@proton.me" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
]

[project.scripts]
aurmod = "aurmod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff.lint]
extend-select = [
    "UP", # pyugrade
    "D", # pydocstyle
    "RUF", # ruff
    "TCH", # flake8-tpye-checking
]
