[project]
name = "aurmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Agil Mammadov", email = "mammadovagil@proton.me" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "gitpython>=3.1.50",
]

[project.scripts]
aurmod = "aurmod:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
    "UP", # pyugrade
    "RUF", # ruff
    "TCH", # flake8-tpye-checking
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
